--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : "South Dakota State University"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=9xWMbXoAAAAJ&hl=en&oi=ao"
-  email            : "sunil.subedi@jacks.sdstate.edu"
+  email            : "sunil.subedi8826@gmail.com"
   researchgate     : "https://www.researchgate.net/profile/Sunil-Subedi"
   uri              :
   bitbucket        :
