--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Sunil Subedi"
+title                    : "Dr. Sunil Subedi"
 title_separator          : "-"
 name                     : &name "Sunil Subedi"
 description              : &description "Ph.D. in Electrical Engineering"
