--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.jfif"
   bio              : "Ph.D. in Electrical Engineering from South Dakota State University."
   location         : "Knoxville, Tennessee"
-  employer         : "Oak Ridge National Laboratory is managed by UT-Battelle LLC for the US Department of Energy"
+  employer         : "Oak Ridge National Laboratory"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=9xWMbXoAAAAJ&hl=en&oi=ao"
   email            : "sunil.subedi8826@gmail.com"
