--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,9 @@ main:
         
   - title: "Affiliations"
     url: /Affiliations/
+
+  - title: "Awards and Honors"
+    url: /AwardsandHonors/
     
   - title: "Professional Development"
     url: /ProfessionalDevelopmentandLeadershipExperience/
